--- a/SimFunctions/SimWrapper.Rmd
+++ b/SimFunctions/SimWrapper.Rmd
@@ -187,6 +187,41 @@ stopCluster(cl)
 # write_csv(S1_out_df,paste0("SimOutput/S1_deepDive_",round(Sys.time()),".csv"))
 ```
 
+```{r}
+# Sim. function inputs
+burn.in.yrs <- 100
+sim.yrs <- 300
+asp.effects.i <- c(-1,0,1)
+n.subpops.i <- length(asp.effects.i)
+move.rate.i <- 0.05
+asp.mag.i <- 10
+clim.sd.i <- 10
+rho.i = 0.25
+
+##### Create a movement matrix from the move.rates row
+move.mx.i <- moveMx_fun(n.subpops.i,move.rate.i)
+
+seeds.i = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag.i & seeds_df$asp.effects == paste(asp.effects.i,collapse = ",")]
+
+df = simfun_exponential(burn.in.yrs=burn.in.yrs, sim.yrs=sim.yrs, n.subpops=n.subpops.i, asp.effects = asp.effects.i,
+                    clim.sd=clim.sd.i, asp.mag=asp.mag.i, move.mx = move.mx.i,seeds = seeds.i,rho = rho.i)
+
+df = filter(df,year>burn.in.yrs)
+ggplot(df,aes(x=clim))+
+  geom_line(aes(y=`s_-1`,color="s-1"))+
+  geom_line(aes(y=`s_0`,color="s0"))+
+  geom_line(aes(y=`s_1`,color="s1"))+
+  geom_point(aes(y=pop.lam,color="pop"))+
+  theme_classic()
+
+plot(df$year,df$clim)
+```
+
+
+###########################################################################################################################
+###########################################################################################################################
+######################################### Scratch and old code ############################################################
+
 ## Scenario 2: Exponential growth, symmetrical movement, Asymmetrical aspect effects
 ```{r Scen2}
 # Things needed to run sim function line by line
@@ -262,11 +297,6 @@ S2_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
 stopCluster(cl)
 write_csv(S2_out_df,paste0("SimOutput/S2_",round(Sys.time()),".csv"))
 ```
-
-
-###########################################################################################################################
-###########################################################################################################################
-######################################### Scratch and old code ############################################################
 
 
 ```{r}
@@ -405,6 +435,11 @@ ggplot(cor_df,aes(x=clim.sd,y=cor))+
   geom_line()
 ```
 
+```{r}
+prism <- read_csv("~/Desktop/prism.csv")
+hist(prism$temp,breaks=30)
+hist(df$clim,breaks=30)
+```
 
 
 ## adding in climate autocorrelation
