--- a/ModelFunctions/BuildingDemoModel.Rmd
+++ b/ModelFunctions/BuildingDemoModel.Rmd
@@ -99,24 +99,24 @@ rm(i)
 asp.effects <- 
   list(
     # Symmetrical
-    c(-1,1),
-    c(-2,-1,1,2),
-    seq(-5,5,by=2),
+    c(-1, 1), # Simple
+    c(-1.1,-1, 1,1.1), # More pops
+    c(-1.5,-1, 1,1.5), # More pops more dramatic
     
     # Asymmetrical
-    c(-2,1),
-    c(-2,-1,1),
-    c(seq(-5,-1,1),1)
+    c(-1,-1,1),
+    c(-1.1,1), 
+    c(-1.2,-1.1,-1,1)
 )
 
 # n.subpops <- length(asp.effects)
 burn.in <- 50
-sim.years <- 500
+sim.years <- 250
 years <- burn.in + sim.years
 seeds <- 500
 
 # Loop over these
-reps <- 20
+reps <- 10
 asp.mags <- seq(0,30,1)
 clim.sds <- seq(0,30,1)
 
@@ -211,21 +211,21 @@ write_csv(maxLam_by_climsd_df,paste0("seedSearchOutput/maxLam_",round(Sys.time()
 asp.effects <- 
   list(
     # Symmetrical
-    c(-1,1),
-    c(-2,-1,1,2),
-    seq(-5,5,by=2),
+    c(-1, 1), # Simple
+    c(-1.1,-1, 1,1.1), # More pops
+    c(-1.5,-1, 1,1.5), # More pops more dramatic
     
     # Asymmetrical
-    c(-2,1),
-    c(-2,-1,1),
-    c(seq(-5,-1,1),1)
+    c(-1,-1,1),
+    c(-1.1,1), 
+    c(-1.2,-1.1,-1,1)
 )
 
 burn.in <- 50
-sim.years <- 500
+sim.years <- 300
 years <- burn.in + sim.years
 
-seed_climsd_df <- read_csv("seedSearchOutput/maxLam_2025-01-27 23:14:17.csv") %>% 
+seed_climsd_df <- read_csv("seedSearchOutput/maxLam_2025-01-29 17:10:05.csv") %>% 
   group_by(asp.mag,asp.effects,clim.sd) %>% # For each clim.sd/asp.mag combination
   summarise(mean.lt.lam = mean(lt.lam),
          max.lt.lam = max(lt.lam)) %>% # Find the mean lt lambda value
@@ -234,7 +234,7 @@ seed_climsd_df <- read_csv("seedSearchOutput/maxLam_2025-01-27 23:14:17.csv") %>
   mutate(seeds = NA)
 
 x.target <- (0.001)^2
-reps <- 50
+reps <- 20
 
 move.rate = 0.05
 
